--- a/Framework/pom.xml
+++ b/Framework/pom.xml
@@ -68,6 +68,7 @@
 		</plugins>
 
 	</build>
+	<build>
 	<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
@@ -81,4 +82,5 @@
                    <target>1.8</target>
                  </configuration>
              </plugin>
+</build>
 </project>
