--- a/Framework/pom.xml
+++ b/Framework/pom.xml
@@ -4,6 +4,10 @@
 	<groupId>Framework</groupId>
 	<artifactId>Framework</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+<properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 
 	<dependencies>
 
